--- a/_config.yml
+++ b/_config.yml
@@ -88,6 +88,13 @@ pagination_dir: page
 ## Themes: https://hexo.io/themes/
 theme: next
 
+githubEmojis:
+  enable: true
+  className: github-emoji
+  unicode: true
+  styles:
+  localEmojis:
+
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
