--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ title: Zhao Weihao 's Blog
 subtitle: 追求自由的少年
 description: 追求自由的少年
 author: Zhao Weihao
-language: en
+language: zh-CN
 timezone: Asia/Shanghai
 email: zhaoweihaochn@gmail.com
 keywords: zhaoweihao
