--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -518,8 +518,8 @@ pangu: false
 
 # Disqus
 disqus:
-  enable: false
-  shortname:
+  enable: true
+  shortname: zhaoweihaos-blog
   count: true
   lazyload: false
 
