--- a/_config.yml
+++ b/_config.yml
@@ -86,7 +86,7 @@ pagination_dir: page
 # Extensions
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
-theme: next
+theme: next-reload
 
 githubEmojis:
   enable: true
