--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "hexo": "^3.9.0",
     "hexo-deployer-git": "^0.2.0",
+    "hexo-excerpt": "^1.1.6",
     "hexo-filter-github-emojis": "^1.4.4",
     "hexo-generator-archive": "^0.1.4",
     "hexo-generator-category": "^0.1.3",
